# beaver

./: .gitignore  Cargo.toml  README.md
beaver-bootstrap/: Cargo.toml
beaver-bootstrap/src/: bootstrap.rs  config.rs  error.rs  lib.rs  log.rs  module.rs  serde.rs
beaver-bootstrap/src/config/: mod.rs
beaver-example/: Cargo.toml
beaver-example/etc/: config.toml
beaver-example/src/: main.rs
