[package]
name = "beaver-bootstrap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
more-di = { workspace = true, features = ["builder", "inject"] }
config = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
