[package]
name = "beaver-bootstrap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-rolling-file = { workspace = true, features = ["non-blocking"] }
more-di = { workspace = true, features = ["builder", "inject"] }
config = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
rstest = { workspace = true }
